<resources>
    <string name="app_name">Bahoot</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="bahoot">Bahoot!</string>
    <string name="registerText">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="room_code">Room Code</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="enter">Enter</string>
    <string name="next_question">Next Question</string>
    <string name="comment">Comment</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="zero_score">Score: 0</string>
    <string name="log_out_prompt">Are you sure you want to log out?</string>
    <string name="bahoot_description">Bahoot!</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="scan_QR">Scan QR</string>
    <string name="home">Home</string>
    <string name="your_score">Your Score</string>

</resources>