<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bahootBackground"
    android:weightSum="8"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingBottom="60dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/bahoot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registerText"
        android:textColor="#FFFFFF"
        android:textSize="60sp"/>

    <EditText
        android:id="@+id/registerNameField"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/registerEmailField"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/registerPhoneNumberField"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="8"/>

    <EditText
        android:id="@+id/registerPasswordField"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLength="50"/>

    <EditText
        android:id="@+id/registerConfirmPasswordField"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="50"/>

    <Button
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/bahootButton"
        android:onClick="register"
        android:text="@string/registerText"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>