<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bahootBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/bahoot_description"
        android:src="@mipmap/bahoot_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/enter_room_code"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/room_code_field"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:ems="6"
        android:hint="@string/room_code"
        android:inputType="number"
        android:textColor="@color/black"
        android:maxLength="6"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/inter_semi_bold"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bahootButton"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="16sp"
        android:onClick="enterRoomCode"
        app:layout_constraintTop_toBottomOf="@+id/room_code_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnScanQR"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/inter_semi_bold"
        android:layout_marginBottom="44dp"
        android:text="@string/scan_QR"
        app:layout_constraintTop_toBottomOf="@+id/enterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
