<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bahootBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/bahootLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@mipmap/bahoot_foreground" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:drawableEnd="@android:drawable/sym_action_email"
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bahootButton"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:onClick="signIn"/>

    <Button
        android:id="@+id/toRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/bahootButton"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:onClick="toRegister"/>

</LinearLayout>
